# minimal-js-runtime

./: CMakeLists.txt  README.md
src/: fib.c  main.c  runtime.c  runtime.h  test.js  timer.c
